@@ -566,10 +566,9 @@ expr_stmt|;
 block|}
 else|else
 block|{
-name|LOG
-operator|.
-name|debug
-argument_list|(
+name|String
+name|msg
+init|=
 literal|"Opened region "
 operator|+
 name|regionInfo
@@ -585,8 +584,33 @@ name|sn
 operator|.
 name|toString
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|regionInfo
+operator|.
+name|isMetaRegion
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+name|msg
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|msg
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 block|}
